# NCore

./: CMakeLists.txt  Doxyfile  README.md  ncore.cpp  ncore.h  ncore_global.h
NCore/: nc2dmatrix.h  ncimage.cpp  ncimage.h  nclogs.cpp  nclogs.h  ncpoint.cpp  ncpoint.h  ncrect.cpp  ncrect.h  ncrgb.cpp  ncrgb.h  ncvector3d.cpp  ncvector3d.h
